{
  "version": 4,
  "terraform_version": "1.2.1",
  "serial": 50,
  "lineage": "80f5c223-a59f-9a91-9fdb-4be1e5a23d54",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "lam_igw_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:579320708566:internet-gateway/igw-0f46727cdc20d0cd3",
            "id": "igw-0f46727cdc20d0cd3",
            "owner_id": "579320708566",
            "tags": {
              "Name": "igw_Oz_TF"
            },
            "tags_all": {
              "Name": "igw_Oz_TF"
            },
            "vpc_id": "vpc-06fb972c2aee12cd6"
          },
          "dependencies": [
            "aws_vpc.lam_tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "default_route_lam_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-063032e600b4b97ad",
            "original_route_table_id": "rtb-02c473ca980b879fc",
            "route_table_id": "rtb-08c3a0e3118908209",
            "vpc_id": "vpc-06fb972c2aee12cd6"
          },
          "dependencies": [
            "aws_route_table.pri_route",
            "aws_vpc.lam_tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pri_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:579320708566:route-table/rtb-08c3a0e3118908209",
            "id": "rtb-08c3a0e3118908209",
            "owner_id": "579320708566",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "lam_pri_rt_TF"
            },
            "tags_all": {
              "Name": "lam_pri_rt_TF"
            },
            "timeouts": null,
            "vpc_id": "vpc-06fb972c2aee12cd6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.lam_tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:579320708566:route-table/rtb-085f345b86d4c50c8",
            "id": "rtb-085f345b86d4c50c8",
            "owner_id": "579320708566",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f46727cdc20d0cd3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "lam_pub_rt_TF"
            },
            "tags_all": {
              "Name": "lam_pub_rt_TF"
            },
            "timeouts": null,
            "vpc_id": "vpc-06fb972c2aee12cd6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.lam_igw_tf",
            "aws_vpc.lam_tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri_route_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-016750672c1245cdc",
            "route_table_id": "rtb-08c3a0e3118908209",
            "subnet_id": "subnet-0f3600fe103c0f0a6"
          },
          "dependencies": [
            "aws_route_table.pri_route",
            "aws_subnet.lam_tf_pri_subnet1",
            "aws_vpc.lam_tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_route_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-048df2654119fc4a6",
            "route_table_id": "rtb-085f345b86d4c50c8",
            "subnet_id": "subnet-05f7fbd0f251ff920"
          },
          "dependencies": [
            "aws_internet_gateway.lam_igw_tf",
            "aws_route_table.pub_route",
            "aws_subnet.lam_tf_pub_subnet1",
            "aws_vpc.lam_tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "lam_tf_pri_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:579320708566:subnet/subnet-0f3600fe103c0f0a6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "10.1.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f3600fe103c0f0a6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "579320708566",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Pri_subnet_1_Oz_TF"
            },
            "tags_all": {
              "Name": "Pri_subnet_1_Oz_TF"
            },
            "vpc_id": "vpc-06fb972c2aee12cd6"
          },
          "dependencies": [
            "aws_vpc.lam_tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "lam_tf_pub_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:579320708566:subnet/subnet-05f7fbd0f251ff920",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05f7fbd0f251ff920",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "579320708566",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Pub_subnet_1_Oz_TF"
            },
            "tags_all": {
              "Name": "Pub_subnet_1_Oz_TF"
            },
            "vpc_id": "vpc-06fb972c2aee12cd6"
          },
          "dependencies": [
            "aws_vpc.lam_tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "lam_tf_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:579320708566:vpc/vpc-06fb972c2aee12cd6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0c4e111f20722ad84",
            "default_route_table_id": "rtb-02c473ca980b879fc",
            "default_security_group_id": "sg-02e631e8d0330d51d",
            "dhcp_options_id": "dopt-20b2b547",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-06fb972c2aee12cd6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02c473ca980b879fc",
            "owner_id": "579320708566",
            "tags": {
              "Name": "VPC_Oz_TF"
            },
            "tags_all": {
              "Name": "VPC_Oz_TF"
            }
          }
        }
      ]
    }
  ]
}